[package]
name = "rerust"
version = "0.1.0"
authors = ["Julius Lehmann <julius@devpi.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-signals = "0.3"
futures = { version = "0.3", features = ["thread-pool"] }
pin-project = "1.0"
pin-utils = "0.1"
carboxyl = "0.2"
uuid = { version = "0.8" , features = ["v4"] }
petgraph = "0.5"
syn = { version = "1.0", features = [ "full", "parsing", "extra-traits" ] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true