[package]
name = "rerust"
version = "0.1.0"
authors = ["Julius Lehmann <julius@devpi.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-signals = "0.3"
futures = { version = "0.3", features = ["thread-pool"] }
carboxyl = "0.2"
petgraph = "0.5"
syn = { version = "1.0", features = [ "full", "parsing", "extra-traits", "visit" ] }
quote = "1.0"
proc-macro2 = "1.0"
enum_dispatch = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[lib]
proc-macro = true

[profile.release]
debug=1
