[package]
name = "rerust"
version = "0.1.0"
authors = ["Julius Lehmann <julius@devpi.de>"]
edition = "2018"
license = "Apache-2.0"
description = "Reactive programming with dataflow semantics"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.5"
syn = { version = "1.0", features = [ "full", "parsing", "extra-traits", "visit" ] }
quote = "1.0"
proc-macro2 = "1.0"
enum_dispatch = "0.3"
if_chain = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "natgraph"
harness = false

[[bench]]
name = "line"
harness = false

[[bench]]
name = "pin"
harness = false

[lib]
proc-macro = true

[profile.release]
debug=1
